--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 # PORT=8000
 # MONGO_URI=mongodb+srv://<db_user>:<db_password>@cluster.dldgv.mongodb.net/strongback
 # JWT_SECRET=supersecretkey
-# CORS_ORIGIN=http://localhost:3000
+# JWT_EXPIRES_IN=3600
