auth added with passport jwt

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 # PORT=8000
 # MONGO_URI=mongodb+srv://<db_user>:<db_password>@cluster.dldgv.mongodb.net/strongback
 # JWT_SECRET=supersecretkey
-# JWT_EXPIRES_IN=3600
+# JWT_EXPIRES_IN=3600 #minute format i.e. 60m
